Adding the [forgotten] dependency python3-cryptography

--- a/control
+++ b/control
@@ -21,7 +21,8 @@ Depends:
   python3-zmq,
   python3-tornado,
   python3-distutils,
-  python3-m2crypto
+  python3-m2crypto,
+  python3-cryptography
 Description: Open source TPM software for Bootstrapping and Maintaining Trust
   Keylime is a TPM based highly scalable remote boot attestation
   and runtime integrity measurement solution.
