--- a/keylime_verifier.service
+++ b/keylime_verifier.service
@@ -1,9 +1,13 @@
 [Unit]
 After=network.target
+Description=The Keylime verifier
 
 [Service]
 Environment=TPM2TOOLS_TCTI=device:/dev/tpmrm0
 ExecStart=/usr/bin/keylime_verifier
+TimeoutSec=3600
+Restart=on-failure
+RestartSec=10
 
 [Install]
 WantedBy=default.target
