--- a/keylime_registrar.service
+++ b/keylime_registrar.service
@@ -5,6 +5,9 @@ After=network.target
 [Service]
 Environment=TPM2TOOLS_TCTI=device:/dev/tpmrm0
 ExecStart=/usr/bin/keylime_registrar
+TimeoutSec=3600
+Restart=on-failure
+RestartSec=10
 
 [Install]
 WantedBy=default.target
