Allows keylime agent to be run as non-root (in this case, as "tss")
Signed-off-by: Marcio Silva <marcios@us.ibm.com>

--- a/keylime_agent.service
+++ b/keylime_agent.service
@@ -4,6 +4,8 @@ StartLimitInterval=10s
 StartLimitBurst=5
 
 [Service]
+User=keylime
+Group=tss
 Environment=TPM2TOOLS_TCTI=device:/dev/tpmrm0
 ExecStart=/usr/bin/keylime_agent
 TimeoutSec=60s
